fixed unaligned columns in Reel-Time Records table

--- a/css/style.css
+++ b/css/style.css
@@ -530,6 +530,7 @@ th {
 }
 
 td {
+  width: 25%;
   padding: 15px;
   text-align: left;
   vertical-align: middle;
